@@ -466,5 +466,30 @@ class tools extends BasePassiveModule
 		}
 		return $use;
 	}
+
+	//return TRUE if the same, and FALSE if not
+	function compare($a, $b)
+	{
+		if(is_array($a) && is_array($b))
+		{
+			$dif = array_diff_assoc($a, $b);
+			if(!empty($dif))
+				Return(FALSE);
+			else
+			{
+				$check = TRUE;
+				foreach($a as $k => $v)
+				{
+					if(is_array($v) && $check)
+						$check = $this -> compare($v, $b[$k]);
+				}
+				Return($check);
+			}
+		}
+		if(is_array($a) || is_array($b))
+			Return(FALSE);
+		else
+			Return($a == $b);
+	}
 }
 ?>
