@@ -5,6 +5,7 @@ Version 0.6.6
 - Added setting for what raid types to show in raid control start raid links
 - Added a best match function to tools module
 - Added waypoint support to rally
+- Added a General queue module Changed chatqueue buddy_queue and masmsg (invites) to use
 
 
 -------------
